# tlc-calib

./: .gitignore  Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting.md  commands.txt  pyproject.toml
configs/: default.yaml
scripts/: convert_lucid_calib.py  train.py  visualize_calibration.py
tlc_calib/: __init__.py  config.py
tlc_calib/data/: __init__.py  dataset.py  image_loader.py  lidar_loader.py
tlc_calib/losses/: __init__.py  photometric.py  regularization.py
tlc_calib/models/: __init__.py  anchor_gaussians.py  auxiliary_mlp.py  camera_rig.py  gaussian_model.py
tlc_calib/optimization/: __init__.py  adaptive_voxel.py  trainer.py
tlc_calib/rendering/: __init__.py  projection.py  rasterizer.py
tlc_calib/utils/: __init__.py  lie_groups.py  transforms.py
